# CMPT433Assignment3

./: CMakeLists.txt  wave_player.c
app/: CMakeLists.txt
app/include/: beatbox.h  mixer.h  playback.h
app/src/: beatbox.c  mixer.c  playback.c  sock.c  wave_player.c
hal/include/: accel.h  audio.h  joystick.h
hal/src/: accel.c  audio.c  joystick.c
server/: package-lock.json  package.json  server.js
server/lib/: dataManip.js  udp_server.js
server/public/: client.js  index.html  server.js
server/public/javascripts/: client.js  udp_ui.js
server/public/stylesheets/: style.css
server/stylesheets/: index.html
working/: wave_player.c
